--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                <div class="staff-member">
                 <img src="T3.jpg" alt="Staff Member 2">
                 <div class="staff-details">
-                    <h4>Archana Prabhakar Patil</h4>
+                    <h4>Mrs. Archana Prabhakar Patil</h4>
                     <p>Position: Teacher</p>
                     
                 </div>
