--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <img src="L.png" alt="School Logo">
         <div>
             <h1>Zapurza Pre School</h1>
-            <p>We don't teach globally, we educate locally.</p>
+            <p>We just don't Teach Globally, we Educate Locally.</p>
         </div>
     </header>
     <nav>
