--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <div class="classes">
             <div class="class">
                 <h4>Play Group</h4>
-                <p>Age: 2 to 3 years</p>
+                <p>Age: Below 3 years</p>
                 <p>Description: Our Play Group program focuses on developing social, emotional, and motor skills through play-based learning activities.</p>
             </div>
             <div class="class">
